# rtems

./: .gitlab-ci.yml
bsps/arm/gen-r52/: README  headers.am
bsps/arm/gen-r52/i2c/: i2cdrv-config.c  i2cdrv-config.h  i2cdrv.c
bsps/arm/gen-r52/include/: bsp.h
bsps/arm/gen-r52/include/bsp/: sramfs.h  xnandps_jffs2.h
bsps/arm/gen-r52/smc/: sramfs.c
bsps/arm/gen-r52/start/: bspstarthooks.c  linkcmds
bsps/arm/gen-r52/wdt/: hpsc-wdt.c
bsps/arm/gen-r52/xilinx_smc/: xnandps_jffs2.c
bsps/arm/hpsc-trch/: README  headers.am
bsps/arm/hpsc-trch/config/: hpsc_trch_qemu-testsuite.tcfg  hpsc_trch_qemu.cfg
bsps/arm/hpsc-trch/console/: console-config.c
bsps/arm/hpsc-trch/i2c/: i2cdrv-config.c  i2cdrv-config.h  i2cdrv.c
bsps/arm/hpsc-trch/include/: bsp.h
bsps/arm/hpsc-trch/include/bsp/: hpsc-wdt.h  hwinfo.h  irq.h
bsps/arm/hpsc-trch/start/: bspstart.c  bspstarthooks.c  hpsc-arch.dts  linkcmds
bsps/arm/hpsc-trch/xilinx_smc/: xnandps.c
bsps/arm/include/bsp/: alt_adapter.h  alt_generalpurpose_io.h  arm-gic-irq.h  dma_330.h  mmu_500.h
bsps/arm/include/bsp/altera/: alt_adapter.h  alt_dma.h  alt_i2c.h
bsps/arm/include/bsp/socal/: alt_gpio.h  alt_qspi.h
bsps/arm/include/bsp/synopsys/: alt_adapter.h  alt_dma.h  alt_dma_program.h  alt_generalpurpose_io.h  alt_i2c.h  alt_qspi.h  alt_qspi_private.h
bsps/arm/include/bsp/synopsys/socal/: alt_gpio.h  alt_gpio0.h  alt_gpio1.h  alt_gpio_common.h  alt_qspi.h
bsps/arm/shared/clock/: clock-armv7m.c
bsps/arm/shared/dma/: alt_dma.c  alt_dma_program.c  dma_330.c
bsps/arm/shared/gpio/: alt_generalpurpose_io.c
bsps/arm/shared/i2c/: alt_i2c.c
bsps/arm/shared/irq/: irq-gic.c  irq-gicv3.c
bsps/arm/shared/mmu/: mmu_500.c
bsps/arm/shared/spi/: alt_qspi.c
bsps/arm/shared/start/: start.S
bsps/include/bsp/: dma.h  fatal.h
c/src/lib/libbsp/arm/: acinclude.m4
c/src/lib/libbsp/arm/gen-r52/: Makefile.am  configure.ac
c/src/lib/libbsp/arm/hpsc-trch/: Makefile.am  configure.ac
cpukit/: Makefile.am
cpukit/include/rtems/: jffs2.h
cpukit/libfs/src/jffs2/include/linux/: jiffies.h  mutex.h  rwsem.h  workqueue.h  writeback.h
cpukit/libfs/src/jffs2/include/linux/mtd/: mtd.h  rawnand.h
cpukit/libfs/src/jffs2/src/: flashio.c  fs-rtems.c  jffs2_fs_sb.h  os-rtems.h  wbuf.c
cpukit/posix/src/: shmunlink.c
testsuites/: configure.ac
testsuites/hpsctests/: Makefile.am  configure.ac
testsuites/hpsctests/gpio_config/: gpio_config.doc  init.c  system.h
testsuites/hpsctests/gpio_init/: gpio_init.doc  init.c  system.h
testsuites/hpsctests/i2c_basic/: i2c_basic.doc  init.c  system.h
testsuites/hpsctests/mmu_map/: init.c  mmu_map.doc  mmu_map.scn
testsuites/hpsctests/smc_nand_block/: init.c
testsuites/hpsctests/smc_nand_jffs2/: init.c  smc_nand_jffs2.doc  smc_nand_jffs2.scn  system.h
testsuites/hpsctests/smc_nand_write/: init.c
testsuites/hpsctests/smc_sram_load/: init.c
testsuites/hpsctests/smc_sram_load_dma/: init.c
testsuites/hpsctests/wdt_poke/: init.c
testsuites/hpsctests/wdt_stage_0_expire/: init.c
